--- a/Lab22/app/src/main/AndroidManifest.xml
+++ b/Lab22/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AgregarComida"
+            android:label="@string/title_activity_agregar_comida" >
+        </activity>
     </application>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
