--- a/Lab22/app/src/main/AndroidManifest.xml
+++ b/Lab22/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
         <activity
             android:name=".MyActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +24,12 @@
         </activity>
         <activity
             android:name=".AgregarComida"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_agregar_comida" >
         </activity>
         <activity
             android:name=".VerProductos"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_ver_productos" >
         </activity>
     </application>
